[project]
name = "gcp-secrets-disabler"
version = "0.1.0"
description = "A script for managing and cleaning up secret versions in Google Cloud Secret Manager."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-secret-manager>=2.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]

[tool.ruff]
line-length = 120
