[tool.poetry]
name = "gcp-secrets-disabler"
version = "0.1.0"
description = "A script for managing and cleaning up secret versions in Google Cloud Secret Manager."
authors = ["Andrey Kalashnikov <andrey.kalashnikov@muehlemann-popp.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-secret-manager = "^2.22.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
